unverified last-moment addition of a new product

--- a/src/views/de/products.njk
+++ b/src/views/de/products.njk
@@ -76,13 +76,31 @@
             </section>
         </article>
 
-        <article id="gadgets" class="gap-top-large">
+        <article id="diy-projects" class="gap-top-large">
             <h1>
-                Gadgets
+                DIY projects
             </h1>
-            <p>
-                Wenn Ihr Tassen oder T-Shirts wollt, lasst es mich wissen unter&#32;<a href="mailto:iwantacup@trajder.com" rel="nofollow noopener" target="_blank" title="iwantacup@trajder.com">iwantacup@trajder.com</a>&#32;xD
-            </p>
+            <section>
+                <h2>
+                    <a href="/en-gb/products/WeldingTable_2400x1200_MateuszDoniec/" title="Super Booster 2000">Welding Table Build Plans 2400x1200 (System Ø28)</a>
+                </h2>
+                <h4>Project: Mateusz Doniec</h4>
+                <div class="row gap-top">
+                    <div>
+                        <p>
+                            Tired of welding on uneven floors or makeshift benches where nothing stays square? Do the prices of professional 2400x1200 tables blow your mind? If so, I’ve teamed up with a technologist to create complete build plans that will completely level up your workshop game 😉"
+                        </p>
+                        <p class="single-out-link">
+                            <a href="/en-gb/products/WeldingTable_2400x1200_MateuszDoniec/" title="Super Booster 2000">More information...</a>
+                        </p>
+                    </div>
+                    <div>
+                        <a class="image-loading" href="/en-gb/products/WeldingTable_2400x1200_MateuszDoniec/" title="Super Booster 2000">
+                            <img src="/assets/images/WeldingTable_2400x1200_MateuszDoniec/thumb-w1120.jpg" alt="Super Booster 2000"/>
+                        </a>
+                    </div>
+                </div>
+            </section>
         </article>
     </main>
 {% endblock %}
