--- a/src/views/products.njk
+++ b/src/views/products.njk
@@ -42,9 +42,9 @@
           Narzędzia DIY
         </p>
       </a>
-      <a href="#gadgets" title="Gadżety">
+      <a href="#diy-projects" title="Projekty DIY">
         <p>
-          Gadżety
+          Projekty DIY
         </p>
       </a>
     </nav>
@@ -76,13 +76,31 @@
       </section>
     </article>
 
-    <article id="gadgets" class="gap-top-large">
+    <article id="diy-projects" class="gap-top-large">
       <h1>
-        Gadżety
+        Projekty DIY
       </h1>
-      <p>
-        Jeśli chcecie jakieś kubki czy koszulki, dajcie znać na&#32;<a href="mailto:chcekubek@trajder.com" rel="nofollow noopener" target="_blank" title="chcekubek@trajder.com">chcekubek@trajder.com</a>&#32;xD
-      </p>
+      <section>
+        <h2>
+          <a href="WeldingTable_2400x1200_MateuszDoniec/" title="Super Booster 2000">Plany Budowy Stołu Spawalniczego 2400x1200 (System Ø28)</a>
+        </h2>
+        <h4>Projekt: Mateusz Doniec</h4>
+        <div class="row gap-top">
+          <div>
+            <p>
+              Masz już dość spawania na krzywej podłodze lub improwizowanych blatach, gdzie nic nie trzyma kąta? Ceny gotowych stołów 2400x1200 zwalają Cię z nóg? Jeśli tak, to wspólnie z technologiem przygotowałem kompletne plany budowy, które całkowicie zmienią jakość Twojej pracy w warsztacie😉
+            </p>
+            <p class="single-out-link">
+              <a href="WeldingTable_2400x1200_MateuszDoniec/" title="Super Booster 2000">Więcej informacji...</a>
+            </p>
+          </div>
+          <div>
+            <a class="image-loading" href="WeldingTable_2400x1200_MateuszDoniec/" title="Super Booster 2000">
+              <img src="/assets/images/WeldingTable_2400x1200_MateuszDoniec/thumb-w1120.jpg" alt="Super Booster 2000"/>
+            </a>
+          </div>
+        </div>
+      </section>
     </article>
   </main>
 {% endblock %}
